[UI] Fix tab scroller overflow on mobile devices

--- a/frontend/app/index.css
+++ b/frontend/app/index.css
@@ -382,4 +382,8 @@ i {
   .footer-component {
     display: none;
   }
+
+  .ant-tabs-nav {
+    overflow-x: auto;
+  }
 }
